samples/_failures_safe/1761331989_35f842_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3d46ca3.c: In function ‘main’:
./samples/SAFE/__tmp_a3d46ca3.c:147:5: error: expected expression at end of input
  147 |     filter[strcspn(filter, "\n")] =
      |     ^~~~~~
./samples/SAFE/__tmp_a3d46ca3.c:147:5: error: expected declaration or statement at end of input
